cmake_minimum_required(VERSION 3.0.0)
project(ictc-modeling VERSION 0.1.0)

if(MSVC)
  add_compile_options(/W4)
else()
  add_compile_options(-Wall -Wextra -Wpedantic -Weffc++)
endif()

add_executable(ictc-modeling main.cpp IndexBuffer.cpp VertexBuffer.cpp VertexArray.cpp Shader.cpp Renderer.cpp Texture.cpp Camera.cpp Mesh.cpp Model.cpp CubeMap.cpp stb_image.cpp)
target_include_directories(ictc-modeling PRIVATE includes)
target_link_libraries(ictc-modeling PRIVATE GLEW glfw GL X11 dl assimp)
target_compile_features(ictc-modeling PRIVATE cxx_auto_type)
target_compile_features(ictc-modeling PRIVATE cxx_nullptr)
target_compile_features(ictc-modeling PRIVATE cxx_range_for)
